[package]
name = "amethyst_rendy_test"
version = "0.1.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/azriel91/amethyst.git", branch = "feature/amethyst-test-rendy", features = ["test-support", "vulkan"] }
amethyst_test = { git = "https://github.com/azriel91/amethyst.git", branch = "feature/amethyst-test-rendy" }
